# ROS2_LEARNING

./: .gitignore  README.md
lessons/: 01-mental-model.md  02-workspace-package-node.md  03-topics.md  04-services.md  05-parameters.md  06-launch-files.md  07-actions.md  08-tf2.md  09-rviz.md
python-notes/: README.md  code-walkthrough.md  python-essentials.md
references/: nav2-fundamentals.md
ros2_ws/src/actions_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/actions_demo/actions_demo/: fib_client.py  fib_server.py
ros2_ws/src/hello_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/hello_ros/hello_ros/: hello_node.py
ros2_ws/src/params_launch_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/params_launch_demo/launch/: fleet.launch.py  robot.launch.py
ros2_ws/src/params_launch_demo/params_launch_demo/: configurable_robot.py
ros2_ws/src/services_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/services_demo/services_demo/: power_client.py  robot_power_server.py
ros2_ws/src/tf2_demo/: package.xml  setup.py
ros2_ws/src/tf2_demo/tf2_demo/: frame_broadcaster.py  frame_listener.py
ros2_ws/src/topics_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/topics_demo/topics_demo/: robot_status_publisher.py  status_monitor.py
