<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actions_demo</name>
  <version>0.1.0</version>
  <description>Lesson 07: action server + client (long-running goal with feedback + cancel).</description>
  <maintainer email="shubhamyadav.cdac11@gmail.com">Shubham</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <!-- the Fibonacci action type (the canonical ROS 2 action example) -->
  <exec_depend>action_tutorials_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
