<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>services_demo</name>
  <version>0.1.0</version>
  <description>Lesson 04: service server + client (request/response).</description>
  <maintainer email="shubhamyadav.cdac11@gmail.com">Shubham</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>   <!-- built-in service types (SetBool, Trigger, ...) -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
