<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topics_demo</name>
  <version>0.1.0</version>
  <description>Lesson 03: publisher + subscriber over a topic.</description>
  <maintainer email="shubhamyadav.cdac11@gmail.com">Shubham</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>   <!-- built-in message types (String, etc.) -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
